# SAM2INV

./: .gitignore  README.md  README_ENV.md  environment.yml  opam-packages.txt  sam2inv.opam
VST/goal/: 0_goal.v  (+2326 more)
docs/: local_model_setup.md  semantic.md  semantic_templates.md
loop_factory/: DATA_COLLECTION_FLOW.md  DESIGN.md  README.md  SKILL.md  STRUCTURAL_DIVERSITY_README.md  augment_dpo_with_houdini.py  batch_pipeline.py  batch_pipeline_binary.py  batch_pipeline_trivial.py  dedup_curated.py  generate_distill.py  generate_dpo_spec.py  grouped_batch_less_params.sh  grouped_batch_lt10_templates.sh  grouped_batch_min_params.sh  grouped_batch_min_params_multi.sh  grouped_batch_missing_low_templates.sh  grouped_batch_run_full_llm_only.sh  grouped_batch_run_pair_full.sh  grouped_batch_run_pair_semantic_expanded.sh  loop_factory.py  one_sample_pipeline.py  reverse_cot.py  sft_pipeline.py  test_cot_quality.py  test_reverse_cot_empty.py
paper/: Makefile  main.aux  main.bbl  main.blg  main.out  main.tex  neurips_2024.sty  references.bib
src/: acsl_ast_filter.py  analyze_logs.py  batch_process.py  bound_analysis.py  cache_manager.py  config.py  debug_replace_loop.py  dynamic_executor_configurable.py  dynamic_runner.py  houdini_pruner.py  inv_generator.py  inv_repairer.py  inv_verifier.py  invariant_filter.py  llm.py  llmfit.py  loop_analysis.py  loop_inv.py  loop_sampler.py  output_verify.py  pfit.py  preprocess.py  prompt.py  run_all_tests.py  run_dirs.py  simple.py  smart_sampler.py  syntax_checker.py  template_generator.py  unified_filter.py  vector_cache_manager.py
(+781 files in other folders)
