opam-version: "2.0"
synopsis: "Environment dependencies for SAM2INV"
description: "Local opam package used to install SAM2INV verification toolchain dependencies."
maintainer: "SAM2INV"
license: "MIT"

depends: [
  "frama-c"
  "why3"
  "alt-ergo"
]

build: [
  ["sh" "-c" "echo sam2inv opam environment package"]
]
